fixing content margin on mobile devices

--- a/themes/SuiteP/css/main.scss
+++ b/themes/SuiteP/css/main.scss
@@ -92,6 +92,10 @@ a:hover {
 
 @media (max-width: 750px) {
 
+  .bootstrap-container.col-sm-offset-3 {
+    margin-top: 110px;
+  }
+
   .bootstrap-container {
     margin-top: 110px;
   }
